--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">CalculatorAppFink</string>
+    <string name="Title">Calculate 99</string>
+    <string name="Clear">Clear</string>
+    <string name="Equals">=</string>
 </resources>
