--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">CalculatorAppFink</string>
+    <string name="app_name">Calculate 99 App</string>
     <string name="Title">Calculate 99</string>
     <string name="Clear">Clear</string>
     <string name="Equals">=</string>
